--- a/voreNET_GUI.ipynb
+++ b/voreNET_GUI.ipynb
@@ -31,6 +31,10 @@
         "import math\n",
         "from torch.utils.data import Dataset\n",
         "\n",
+        "!wget https://raw.githubusercontent.com/LadMikkie/vnet/v-moderu\n",
+        "!wget https://raw.githubusercontent.com/LadMikkie/vnet/v-datasetto\n",
+        "\n",
+        "\n",
         "class CharDataset(Dataset):\n",
         "\n",
         "    def __init__(self, data, block_size):\n",
