--- a/main.ipynb
+++ b/main.ipynb
@@ -23,8 +23,8 @@
         "import math\n",
         "from torch.utils.data import Dataset\n",
         "\n",
-        "!wget https://raw.githubusercontent.com/LadMikkie/vnet/v-moderu\n",
-        "!wget https://raw.githubusercontent.com/LadMikkie/vnet/v-datasetto\n",
+        "!wget https://huggingface.co/ricardio/vnet/resolve/main/v-moderu\n",
+        "!wget https://huggingface.co/ricardio/vnet/resolve/main/v-datasetto\n",
         "\n",
         "\n",
         "class CharDataset(Dataset):\n",
