--- a/main.ipynb
+++ b/main.ipynb
@@ -22,6 +22,9 @@
         "\n",
         "import math\n",
         "from torch.utils.data import Dataset\n",
+        "/n",
+        "!git clone https://github.com/LadMikkie/vnet.git\n",
+        "%cd vnet\n",
         "\n",
         "!wget https://huggingface.co/ricardio/vnet/resolve/main/v-moderu\n",
         "!wget https://huggingface.co/ricardio/vnet/resolve/main/v-datasetto\n",
